Working on bikes modify and delete function, adding alerts and raw password change page

--- a/src/main/resources/templates/AdminView/addBicyclePanel.html
+++ b/src/main/resources/templates/AdminView/addBicyclePanel.html
@@ -74,6 +74,10 @@
 
 <body>
 
+<div th:if="${error}" class="alert alert-danger">
+    <p th:text="${error}"></p>
+</div>
+
 <div>
     <a href="/admin">
         <button>Rowery</button>
@@ -83,6 +87,9 @@
     </a>
     <a href="/admin/opinions">
         <button>Opinie</button>
+    </a>
+    <a href="/admin/changePassword">
+        <button>Zmień hasło</button>
     </a>
     <a href="/logout">
         <button>Wyloguj</button>
