--- a/src/main/resources/templates/AdminView/bicyclesPanel.html
+++ b/src/main/resources/templates/AdminView/bicyclesPanel.html
@@ -79,6 +79,10 @@
 
 <body>
 
+<div th:if="${message}" class="alert alert-success">
+    <p th:text="${message}"></p>
+</div>
+
 <div>
     <a href="/admin">
         <button>Rowery</button>
@@ -89,6 +93,9 @@
     <a href="/admin/opinions">
         <button>Opinie</button>
     </a>
+    <a href="/admin/changePassword">
+        <button>Zmień hasło</button>
+    </a>
     <a href="/logout">
         <button>Wyloguj</button>
     </a>
@@ -96,37 +103,35 @@
 
 <h1>Panel Admina - Zarządzanie Rowerami</h1>
 
-<form method="post" action="/admin/modifyBicycle" id="bicycleForm">
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Zdjęcie</th>
-            <th>Nazwa</th>
-            <th>Typ</th>
-            <th>Cena (PLN)</th>
-            <th>Uszkodzony</th>
-            <th>Zapisz</th>
-            <th>Usuń</th>
-        </tr>
-        <tr th:each="bicycle : ${bicycles}">
+<table>
+    <tr th:each="bicycle : ${bicycles}">
+        <form method="post" action="/admin/modifyBicycle" id="bicycleForm">
             <td th:text="${bicycle.id}"></td>
             <td><img th:src="@{${bicycle.photoURL}}" alt="Bicycle Photo" style="max-width: 100px;"></td>
             <td th:text="${bicycle.name}"></td>
             <td th:text="${bicycle.type}"></td>
-            <td><input type='text' name='pricePerDay' th:value="${bicycle.pricePerDay}"></td>
+            <td><input type='text' name='pricePerDay' id="price" th:value="${bicycle.pricePerDay}"></td>
             <td><input type='checkbox' name='disable' th:checked="${bicycle.disable}"></td>
+            <input type="hidden" name="bicycleId" id="bicycleIdInput" th:value="${bicycle.id}">
+            <input type="hidden" name="bicycleId" id="disableInput" th:value="${bicycle.disable}">
+            <input type="hidden" name="bicycleId" id="priceInput" th:value="${bicycle.pricePerDay}">
+            <input type="hidden" name="action" id="actionInput" value="">
             <td>
                 <button type="button" onclick="setAction('save')">Zapisz</button>
             </td>
             <td>
                 <button type="button" onclick="setAction('delete')">Usuń</button>
             </td>
-        </tr>
-    </table>
-    <input type="hidden" name="action" id="actionInput" value="">
-    <input type="hidden" name="bicycleId" id="bicycleIdInput" value="">
-    <button type="submit">Submit</button>
-</form>
+        </form>
+    </tr>
+</table>
+
+<script>
+    function setAction(action) {
+        document.getElementById('actionInput').value = action;
+        document.getElementById('bicycleForm').submit();
+    }
+</script>
 
 <div>
     <a href="/admin/addBicycleForm">
