--- a/src/main/resources/templates/AdminView/ordersPanel.html
+++ b/src/main/resources/templates/AdminView/ordersPanel.html
@@ -17,6 +17,9 @@
     <a href="/admin/opinions">
         <button>Opinie</button>
     </a>
+    <a href="/admin/changePassword">
+        <button>Zmień hasło</button>
+    </a>
     <a href="/logout">
         <button>Wyloguj</button>
     </a>
