--- a/src/main/resources/templates/AdminView/changePasswordPanel.html
+++ b/src/main/resources/templates/AdminView/changePasswordPanel.html
@@ -17,7 +17,7 @@
     <a href="/admin/opinions">
         <button>Opinie</button>
     </a>
-    <a href="/admin/changePassword">
+    <a href="/admin/password">
         <button>Zmień hasło</button>
     </a>
     <a href="/logout">
@@ -27,32 +27,24 @@
 
 <body>
 
-<h1>Panel Admina - Zarządzanie Opiniami</h1>
+<div th:if="${error}" class="alert alert-danger">
+    <p th:text="${error}"></p>
+</div>
 
-<form method="post" action="twoj_plik_obslugujacy_formularz.php">
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Nazwa</th>
-            <th>Cena (PLN)</th>
-            <th>Dostępność</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Rower A</td>
-            <td><input type='text' name='cena[1]' value='20.00'></td>
-            <td><input type='checkbox' name='dostepnosc[1]' checked></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Rower B</td>
-            <td><input type='text' name='cena[2]' value='15.00'></td>
-            <td><input type='checkbox' name='dostepnosc[2]'></td>
-        </tr>
-        <!-- Dodaj kolejne wiersze dla kolejnych rowerów -->
-    </table>
-    <br>
-    <input type="submit" value="Zapisz zmiany">
+<h1>Panel Admina - Zmiana hasła</h1>
+
+<form method="post" th:action="@{/admin/changePassword}">
+    <div>
+        <label for="password">Podaj nowe hasło:</label>
+        <input type="password" id="password" name="password" required>
+    </div>
+    <div>
+        <label for="password">Podaj nowe hasło:</label>
+        <input type="password" id="passwordConfirm" name="passwordConfirm" required>
+    </div>
+    <div>
+        <button type="submit">Zapisz zmiany</button>
+    </div>
 </form>
 
 </body>
