--- a/src/main/resources/templates/AdminView/ordersPanel.html
+++ b/src/main/resources/templates/AdminView/ordersPanel.html
@@ -17,7 +17,7 @@
     <a href="/admin/opinions">
         <button>Opinie</button>
     </a>
-    <a href="/admin/changePassword">
+    <a href="/admin/password">
         <button>Zmień hasło</button>
     </a>
     <a href="/logout">
