--- a/src/main/resources/templates/AdminView/opinionsPanel.html
+++ b/src/main/resources/templates/AdminView/opinionsPanel.html
@@ -17,7 +17,7 @@
     <a href="/admin/opinions">
         <button>Opinie</button>
     </a>
-    <a href="/admin/changePassword">
+    <a href="/admin/password">
         <button>Zmień hasło</button>
     </a>
     <a href="/logout">
@@ -27,33 +27,40 @@
 
 <body>
 
+<div th:if="${message}" class="alert alert-success">
+    <p th:text="${message}"></p>
+</div>
+
 <h1>Panel Admina - Zarządzanie Opiniami</h1>
 
-<form method="post" action="twoj_plik_obslugujacy_formularz.php">
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Nazwa</th>
-            <th>Cena (PLN)</th>
-            <th>Dostępność</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Rower A</td>
-            <td><input type='text' name='cena[1]' value='20.00'></td>
-            <td><input type='checkbox' name='dostepnosc[1]' checked></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Rower B</td>
-            <td><input type='text' name='cena[2]' value='15.00'></td>
-            <td><input type='checkbox' name='dostepnosc[2]'></td>
-        </tr>
-        <!-- Dodaj kolejne wiersze dla kolejnych rowerów -->
-    </table>
-    <br>
-    <input type="submit" value="Zapisz zmiany">
-</form>
+<div th:each="opinion : ${opinions}">
+    <form method="post" action="/admin/deleteOpinion" id="opinionFormDelete">
+        <table>
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Subject</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td th:text="${opinion.id}"></td>
+                <td th:text="${opinion.name}"></td>
+                <td th:text="${opinion.customerEmail}"></td>
+                <td th:text="${opinion.subject}"></td>
+            </tr>
+            </tbody>
+        </table>
+        <div>Treść opinii:</div>
+        <div th:text="${opinion.message}"></div>
+        <input type="hidden" id="id" name="id" th:value="${opinion.id}">
+        <div>
+            <button type="submit">Usuń</button>
+        </div>
+    </form>
+</div>
 
 </body>
 
