--- a/src/main/resources/templates/CustomerView/aboutUs.html
+++ b/src/main/resources/templates/CustomerView/aboutUs.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css"  rel="stylesheet" type="text/css" />
+    <link href="css/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <!-- Navigation -->
@@ -30,11 +30,11 @@
                     <li class="nav-item"><a class="nav-link" href="contact">Kontakt</a></li>
                 </ul>
             </div>
-            <form class="d-flex" action="cart" method="get">
+            <form class="d-flex">
                 <button class="btn btn-outline-dark" type="submit">
                     <i class="bi-cart-fill me-1"></i>
                     Koszyk
-                    <span class="badge bg-dark text-white ms-1 rounded-pill" th:text=${cartSize}></span>
+                    <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                 </button>
             </form>
         </div>
