--- a/src/main/resources/templates/AdminView/bicyclesPanel.html
+++ b/src/main/resources/templates/AdminView/bicyclesPanel.html
@@ -5,148 +5,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wypożyczalnia - Panel Admina</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        div {
-            margin-bottom: 20px;
-        }
-
-        a {
-            text-decoration: none;
-            color: #333;
-        }
-
-        button {
-            padding: 10px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-
-        input[type="checkbox"] {
-            margin-top: 6px;
-        }
-
-        input[type="submit"] {
-            background-color: #4CAF50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-    </style>
+    <!-- Bootstrap icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
 <body>
 
-<div th:if="${message}" class="alert alert-success">
-    <p th:text="${message}"></p>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="/admin">Wypożyczalnia</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item"><a class="nav-link" href="/admin">Rowery</a></li>
+                <li class="nav-item"><a class="nav-link" href="/admin/orders">Zamówienia</a></li>
+                <li class="nav-item"><a class="nav-link" href="/admin/opinions">Opinie</a></li>
+                <li class="nav-item"><a class="nav-link" href="/admin/password">Zmień hasło</a></li>
+                <li class="nav-item"><a class="nav-link" href="/logout">Wyloguj</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- Header-->
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Panel Admina</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Zarządzanie flotą rowerów</p>
+        </div>
+    </div>
+</header>
+<div class="container-fluid mt-4">
+    <h1 class="text-center">Lista rowerów</h1>
+
+    <table class="table table-bordered text-center">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Zdjęcie</th>
+                <th scope="col">Nazwa</th>
+                <th scope="col">Typ</th>
+                <th scope="col">Cena za dzień wypożyczenia</th>
+                <th scope="col">Uszkodzony</th>
+                <th scope="col">Modyfikuj</th>
+                <th scope="col">Usuń</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="bicycle : ${bicycles}">
+                <form method="post" action="/admin/modifyBicycle" id="bicycleFormSave">
+                    <td class="align-middle" th:text="${bicycle.id}"></td>
+                    <td class="align-middle"><img th:src="@{${bicycle.photoURL}}" alt="Bicycle Photo" style="max-width: 100px;"></td>
+                    <td class="align-middle" th:text="${bicycle.name}"></td>
+                    <td class="align-middle" th:text="${bicycle.type}"></td>
+                    <td class="align-middle"><input type='text' class="form-control" name='pricePerDay' id="price" th:value="${bicycle.pricePerDay}"></td>
+                    <td class="align-middle text-center">
+                        <div class="d-flex align-items-center justify-content-center">
+                            <span class="mr-2">Uszkodzony:</span>
+                            <div class="custom-control custom-checkbox">
+                                <input type='checkbox' class="custom-control-input" id="disableCheckbox${bicycle.id}" name='disable' th:checked="${bicycle.disable}">
+                                <label class="custom-control-label" for="disableCheckbox${bicycle.id}"></label>
+                            </div>
+                        </div>
+                    </td>
+                    <input type="hidden" name="bicycleId" id="bicycleIdInput1" th:value="${bicycle.id}">
+                    <input type="hidden" name="bicycleId" id="disableInput1" th:value="${bicycle.disable}">
+                    <input type="hidden" name="bicycleId" id="priceInput1" th:value="${bicycle.pricePerDay}">
+                    <input type="hidden" name="action" id="actionInput1" value="save">
+                    <td class="align-middle">
+                        <button type="submit" class="btn btn-success">Zapisz</button>
+                    </td>
+                </form>
+                <form method="post" action="/admin/modifyBicycle" id="bicycleFormDelete">
+                    <input type="hidden" name="bicycleId" id="bicycleIdInput2" th:value="${bicycle.id}">
+                    <input type="hidden" name="action" id="actionInput2" value="delete">
+                    <td class="align-middle">
+                        <button type="submit" class="btn btn-danger">Usuń</button>
+                    </td>
+                </form>
+            </tr>
+        </tbody>
+    </table>
+
+    <div class="text-center">
+        <a href="/admin/addBicycleForm" class="btn btn-primary">Dodaj rower</a>
+    </div>
 </div>
 
-<div>
-    <a href="/admin">
-        <button>Rowery</button>
-    </a>
-    <a href="/admin/orders">
-        <button>Zamówienia</button>
-    </a>
-    <a href="/admin/opinions">
-        <button>Opinie</button>
-    </a>
-    <a href="/admin/password">
-        <button>Zmień hasło</button>
-    </a>
-    <a href="/logout">
-        <button>Wyloguj</button>
-    </a>
-</div>
-
-<h1>Panel Admina - Zarządzanie Rowerami</h1>
-
-<table>
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>Zdjęcie</th>
-        <th>Nazwa</th>
-        <th>Typ</th>
-        <th>Cena za dzień wypożyczenia</th>
-        <th>Uszkodzony</th>
-        <th>Modyfikuj</th>
-        <th>Usuń</th>
-    </tr>
-    </thead>
-    <tr th:each="bicycle : ${bicycles}">
-        <form method="post" action="/admin/modifyBicycle" id="bicycleFormSave">
-            <td th:text="${bicycle.id}"></td>
-            <td><img th:src="@{${bicycle.photoURL}}" alt="Bicycle Photo" style="max-width: 100px;"></td>
-            <td th:text="${bicycle.name}"></td>
-            <td th:text="${bicycle.type}"></td>
-            <td><input type='text' name='pricePerDay' id="price" th:value="${bicycle.pricePerDay}"></td>
-            <td><input type='checkbox' name='disable' th:checked="${bicycle.disable}"></td>
-            <input type="hidden" name="bicycleId" id="bicycleIdInput1" th:value="${bicycle.id}">
-            <input type="hidden" name="bicycleId" id="disableInput1" th:value="${bicycle.disable}">
-            <input type="hidden" name="bicycleId" id="priceInput1" th:value="${bicycle.pricePerDay}">
-            <input type="hidden" name="action" id="actionInput1" value="save">
-            <td>
-                <button type="submit">Zapisz</button>
-            </td>
-        </form>
-        <form method="post" action="/admin/modifyBicycle" id="bicycleFormDelete">
-            <input type="hidden" name="bicycleId" id="bicycleIdInput2" th:value="${bicycle.id}">
-            <input type="hidden" name="action" id="actionInput2" value="delete">
-            <td>
-                <button type="submit">Usuń</button>
-            </td>
-        </form>
-    </tr>
-</table>
-
-<div>
-    <a href="/admin/addBicycleForm">
-        <button>Dodaj rower</button>
-    </a>
-</div>
+<!-- Bootstrap JS and Popper.js scripts (needed for some Bootstrap features) -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3R6z33Pi1tFwtFf0ca2Nae7qGVIgdDj2uDoB4nk2csmTO9SRT46TYYU7StJpMNPn" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
