--- a/src/main/resources/templates/AdminView/changePasswordPanel.html
+++ b/src/main/resources/templates/AdminView/changePasswordPanel.html
@@ -5,47 +5,70 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wypożyczalnia - Panel Admina</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-
-<div>
-    <a href="/admin">
-        <button>Rowery</button>
-    </a>
-    <a href="/admin/orders">
-        <button>Zamówienia</button>
-    </a>
-    <a href="/admin/opinions">
-        <button>Opinie</button>
-    </a>
-    <a href="/admin/password">
-        <button>Zmień hasło</button>
-    </a>
-    <a href="/logout">
-        <button>Wyloguj</button>
-    </a>
-</div>
 
 <body>
 
-<div th:if="${error}" class="alert alert-danger">
-    <p th:text="${error}"></p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+        <a class="navbar-brand" href="/admin">Panel Admina</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin">Rowery</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/orders">Zamówienia</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/opinions">Opinie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/password">Zmień hasło</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Wyloguj</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<!-- Header-->
+<header class="bg-dark py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="text-center text-white">
+            <h1 class="display-4 fw-bolder">Panel Admina</h1>
+            <p class="lead fw-normal text-white-50 mb-0">Zmiana hasła</p>
+        </div>
+    </div>
+</header>
+<div class="container mt-4">
+
+    <h1 class="my-4">Zmiana hasła</h1>
+
+    <form method="post" th:action="@{/admin/changePassword}" class="my-4">
+        <div class="form-group">
+            <label for="password">Podaj nowe hasło:</label>
+            <input type="password" id="password" name="password" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label for="passwordConfirm">Potwierdź nowe hasło:</label>
+            <input type="password" id="passwordConfirm" name="passwordConfirm" class="form-control" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Zapisz zmiany</button>
+    </form>
+
 </div>
 
-<h1>Panel Admina - Zmiana hasła</h1>
-
-<form method="post" th:action="@{/admin/changePassword}">
-    <div>
-        <label for="password">Podaj nowe hasło:</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <div>
-        <label for="password">Podaj nowe hasło:</label>
-        <input type="password" id="passwordConfirm" name="passwordConfirm" required>
-    </div>
-    <div>
-        <button type="submit">Zapisz zmiany</button>
-    </div>
-</form>
+<!-- Bootstrap JS and Popper.js scripts (needed for some Bootstrap features) -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 
