Adding to Admin Panel penalty price mechanism and sorted elements display

--- a/src/main/resources/templates/AdminView/bicyclesPanel.html
+++ b/src/main/resources/templates/AdminView/bicyclesPanel.html
@@ -53,7 +53,7 @@
                 <th scope="col">Zdjęcie</th>
                 <th scope="col">Nazwa</th>
                 <th scope="col">Typ</th>
-                <th scope="col">Cena za dzień wypożyczenia</th>
+                <th scope="col">Cena za dzień wypożyczenia [PLN]</th>
                 <th scope="col">Uszkodzony</th>
                 <th scope="col">Modyfikuj</th>
                 <th scope="col">Usuń</th>
