--- a/src/main/resources/templates/AdminView/ordersPanel.html
+++ b/src/main/resources/templates/AdminView/ordersPanel.html
@@ -69,9 +69,9 @@
             <th>Kod pocztowy</th>
             <th>Email</th>
             <th>Numer telefonu</th>
-            <th>Do zapłaty</th>
-            <th>Dopłata za późniejszy zwrot</th>
-            <th>Całkowita zapłata</th>
+            <th>Do zapłaty [PLN]</th>
+            <th>Dopłata za późniejszy zwrot [PLN]</th>
+            <th>Całkowita zapłata [PLN]</th>
             <th>Nalicz kary</th>
             <th>Odlicz kary</th>
             <th>Usuń</th>
