--- a/src/main/resources/templates/CustomerView/index.html
+++ b/src/main/resources/templates/CustomerView/index.html
@@ -146,8 +146,8 @@
                                     <div class="bi-star-fill"></div>
                                 </div>
                                 <!-- Product price-->
-                                <span class="text-muted text-decoration-line-through">25.00 zł</span>
-                                18.00 zł/za dzień
+                                <span class="text-muted text-decoration-line-through">Cena podstawowa</span>
+                                15% zniżki dla całego zamówienia !!!
                                 <div>Przy wynajmnie przynajmniej 5 rowerów w jednym zamówieniu!</div>
                             </div>
                         </div>
