--- a/src/main/resources/templates/CustomerView/cart.html
+++ b/src/main/resources/templates/CustomerView/cart.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
+
+    <div th:if="${message}" class="alert alert-success">
+        <p th:text="${message}"></p>
+    </div>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="store">Wypożyczalnia</a>
@@ -74,7 +79,13 @@
                     <div class="card-body">
                         <h5 class="card-title">Podsumowanie</h5>
                         <p class="card-text">Liczba rowerów: <span th:text=${cartSize}></span></p>
-                        <p class="card-text">Suma: <span th:text="${price}"></span> zł</p>
+                        <p class="card-text">Data rozpoczęcia wynajmu: <span th:text="${#dates.format(beginDate, 'dd.MM.yyyy')}"></span></p>
+                        <p class="card-text">Data zakończenia wynajmu: <span th:text="${#dates.format(endDate, 'dd.MM.yyyy')}"></span></p>
+                        <p class="card-text">
+                            Suma:
+                            <span th:text="${#numbers.formatDecimal(price, 1, 'DEFAULT', 2, 'DEFAULT')}"></span> zł
+                            <span th:text="${info}"></span>
+                        </p>
                         <a href="summary" class="btn btn-primary">Dalej</a>
                     </div>
                 </div>
