--- a/src/main/resources/templates/CustomerView/opinions.html
+++ b/src/main/resources/templates/CustomerView/opinions.html
@@ -16,6 +16,9 @@
         <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
+      <div th:if="${message}" class="alert alert-success">
+          <p th:text="${message}"></p>
+      </div>
       <div th:if="${error}" class="alert alert-danger">
           <p th:text="${error}"></p>
       </div>
@@ -61,29 +64,29 @@
                     <form class="mb-5" method="post" id="contactForm" name="contactForm" novalidate="novalidate" th:action="@{/uploadOpinion}">
                         <div class="row">
                             <div class="col-md-6 form-group mb-3">
-                                <label for="" class="col-form-label">Name *</label>
-                                <input type="text" class="form-control" name="name" id="name" placeholder="Your name">
+                                <label for="name" class="col-form-label">Imię *</label>
+                                <input type="text" class="form-control" name="name" id="name" placeholder="Twoje imię">
                             </div>
                             <div class="col-md-6 form-group mb-3">
-                                <label for="" class="col-form-label">Email *</label>
-                                <input type="email" class="form-control" name="email" id="email" placeholder="Your email">
+                                <label for="email" class="col-form-label">Email *</label>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="Twój email">
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-12 form-group mb-3">
-                                <label for="budget" class="col-form-label">Subject</label>
-                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Your subject">
+                                <label for="subject" class="col-form-label">Temat *</label>
+                                <input type="text" class="form-control" name="subject" id="subject" placeholder="Twój temat">
                             </div>
                         </div>
                         <div class="row mb-5">
                             <div class="col-md-12 form-group mb-3">
-                                <label for="message" class="col-form-label">Message *</label>
-                                <textarea class="form-control" name="message" id="message" cols="30" rows="4" placeholder="Write your message"></textarea>
+                                <label for="message" class="col-form-label">Treść wiadomości *</label>
+                                <textarea class="form-control" name="message" id="message" cols="30" rows="4" placeholder="Treść twojej wiadomości"></textarea>
                             </div>
                         </div>
                         <div class="row justify-content-center">
                             <div class="col-md-5 form-group text-center">
-                                <input type="submit" value="Send Message" class="btn btn-block btn-primary rounded-0 py-2 px-4">
+                                <input type="submit" value="Wyślij opinię" class="btn btn-block btn-primary rounded-0 py-2 px-4">
                             </div>
                         </div>
                     </form>
