--- a/src/main/resources/templates/CustomerView/aboutUs.html
+++ b/src/main/resources/templates/CustomerView/aboutUs.html
@@ -55,15 +55,15 @@
                 <div class="carousel-item active">
                     <img th:src="@{'/assets/first.jpg'}" class="d-block w-100" alt="first"> <!-- The src path will be changed, it is just a prototype-->
                     <div class="carousel-caption d-none d-md-block">
-                        <h3 >Wyrusz z nami w górską przygodę</h3>
-                        <p>W naszej ofercie posiadamy szeroki wybór rowerów, które sprawią, że Twoja wycieczka pozostanie niezapomniana</p>
+                        <h3 style="text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; font-size:35px">Wyrusz z nami w górską przygodę</h3>
+                        <p style="text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; font-size:20px">W naszej ofercie posiadamy szeroki wybór rowerów, które sprawią, że Twoja wycieczka pozostanie niezapomniana</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img th:src="@{'/assets/second.jpg'}" class="d-block w-100" alt="second">  <!-- The src path, as well as image and text will be changed, it is just a prototype-->
                     <div class="carousel-caption d-none d-md-block">
-                        <h3>Wyrusz z nami w górską przygodę</h3>
-                        <p>W naszej ofercie posiadamy szeroki wybór rowerów, które sprawią, że Twoja wycieczka pozostanie niezapomniana</p>
+                        <h3 style="text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; font-size:35px">Promocja!!!</h3>
+                        <p style="text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black; font-size:20px">Przy zamówieniu większej ilości niż 5 rowerów wypożyczającemu przysługuje 15% zniżki od ceny wypożyczenia.</p>
                       </div>
                 </div>
             </div>
