--- a/src/main/resources/templates/AdminView/changePasswordPanel.html
+++ b/src/main/resources/templates/AdminView/changePasswordPanel.html
@@ -11,6 +11,10 @@
 
 <body>
 
+<div th:if="${error}" class="alert alert-danger">
+    <p th:text="${error}"></p>
+</div>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="/admin">Panel Admina</a>
